[package]
name = "hexegg"
version = "0.11.0"
authors = ["Michal Kopera"]
edition = "2021"
description = "Cross-platform terminal based hex editor"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
crossterm = {version="0.27", features=["serde"]}
serde = {version="1.0", features=["derive"]}
toml = "0.8"
signal-hook = "0.3"
regex-lite = "0.1.6"

